--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,7 +16,15 @@ ENV REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
 
 RUN git clone --depth=1 --branch ${GIT_REF} ${GIT_REPO} repo
 WORKDIR /src/repo/frontend
-RUN npm ci
+RUN if [ -f package-lock.json ]; then \
+      npm ci; \
+    elif [ -f pnpm-lock.yaml ]; then \
+      npm i -g corepack && corepack enable && pnpm i --frozen-lockfile=false; \
+    elif [ -f yarn.lock ]; then \
+      npm i -g yarn && (yarn install --frozen-lockfile || yarn install); \
+    else \
+      npm install --legacy-peer-deps; \
+    fi
 RUN npm run build
 # Normaliza nome da pasta de build (dist ou build)
 RUN if [ -d "dist" ]; then mv dist appbuild; elif [ -d "build" ]; then mv build appbuild; else echo "Pasta de build não encontrada"; exit 1; fi
