--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,4 @@
-# frontend.Dockerfile (FIX)
-# Usa Node 18 para compat com libs antigas e ignora lockfile desatualizado
+# frontend.Dockerfile (PATCH)
 FROM node:18-alpine AS build
 WORKDIR /src
 RUN apk add --no-cache git
@@ -7,7 +6,7 @@ RUN apk add --no-cache git
 ARG GIT_REPO=https://github.com/gian0205/whaticketsaas.git
 ARG GIT_REF=master
 
-# Aponta o front para a API no mesmo domínio via /api
+# API via mesmo domínio (proxy /api no Nginx)
 ARG VITE_BACKEND_URL=/api
 ARG REACT_APP_BACKEND_URL=/api
 ENV VITE_BACKEND_URL=${VITE_BACKEND_URL}
@@ -16,21 +15,22 @@ ENV REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
 RUN git clone --depth=1 --branch ${GIT_REF} ${GIT_REPO} repo
 WORKDIR /src/repo/frontend
 
-# 1) Evita travas de peer deps e ignora lockfile quebrado
+# Evita travas de peer deps e lockfile desatualizado
 ENV NPM_CONFIG_LEGACY_PEER_DEPS=true
 RUN rm -f package-lock.json yarn.lock pnpm-lock.yaml \
- && npm install --legacy-peer-deps
+ && npm install --legacy-peer-deps \
+ && npm install --legacy-peer-deps material-ui-popup-state@^5
 
-# 2) Build
+# (opcional, se CRA reclamar de warnings)
+ENV CI=false
+
 RUN npm run build
-# Normaliza pasta de build
-RUN if [ -d "dist" ]; then mv dist appbuild; elif [ -d "build" ]; then mv build appbuild; else echo "Pasta de build não encontrada"; exit 1; fi
+RUN if [ -d dist ]; then mv dist appbuild; elif [ -d build ]; then mv build appbuild; else echo "Pasta de build não encontrada"; exit 1; fi
 
 FROM nginx:alpine
-# Copia estáticos
 COPY --from=build /src/repo/frontend/appbuild /usr/share/nginx/html
 
-# Nginx com fallback SPA e proxy para API + WebSocket
+# Proxy /api -> api:4000 + websocket (ajuste a porta se sua API for 8080)
 RUN printf '\
 server {\n\
   listen 80;\n\
@@ -38,23 +38,8 @@ server {\n\
   root /usr/share/nginx/html;\n\
   index index.html;\n\
   location / { try_files $uri /index.html; }\n\
-  location /api/ {\n\
-    proxy_pass http://api:4000/;\n\
-    proxy_set_header Host $host;\n\
-    proxy_set_header X-Real-IP $remote_addr;\n\
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n\
-    proxy_set_header X-Forwarded-Proto $scheme;\n\
-  }\n\
-  location /socket.io/ {\n\
-    proxy_http_version 1.1;\n\
-    proxy_set_header Upgrade $http_upgrade;\n\
-    proxy_set_header Connection \"upgrade\";\n\
-    proxy_pass http://api:4000/socket.io/;\n\
-    proxy_set_header Host $host;\n\
-    proxy_set_header X-Real-IP $remote_addr;\n\
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n\
-    proxy_set_header X-Forwarded-Proto $scheme;\n\
-  }\n\
+  location /api/ { proxy_pass http://api:4000/; proxy_set_header Host $host; proxy_set_header X-Real-IP $remote_addr; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; }\n\
+  location /socket.io/ { proxy_http_version 1.1; proxy_set_header Upgrade $http_upgrade; proxy_set_header Connection \"upgrade\"; proxy_pass http://api:4000/socket.io/; proxy_set_header Host $host; proxy_set_header X-Real-IP $remote_addr; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; }\n\
 }\n' > /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
